--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
+    "vue-avatar": "^2.3.3",
     "vue-router": "^4.0.3",
     "vue-template-compiler": "^2.6.12"
   },
