--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.0.0",
     "vue-avatar": "^2.3.3",
     "vue-router": "^4.0.3",
+    "vue-sidebar-menu": "^4.7.4",
     "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
