--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.1",
     "argon-design-system-free": "^1.2.0",
     "autoprefixer": "9",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
+    "csvtojson": "^2.0.10",
+    "es6-promise": "^4.2.8",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
     "postcss": "7",
@@ -20,12 +24,14 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^3.0.0",
     "vue-avatar": "^2.3.3",
+    "vue-axios": "^3.2.4",
     "vue-csv-import": "^4.0.1",
     "vue-router": "^4.0.3",
     "vue-sidebar-menu": "^4.7.4",
     "vue-sweetalert2": "^4.2.1",
     "vue-template-compiler": "^2.6.12",
-    "vue2-dropzone": "^3.6.0"
+    "vue2-dropzone": "^3.6.0",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
