--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Copy File On Dist to Html 
         run: | 
-         sudo cp -R temp/dist/ html
+         sudo cp -R /var/www/temp/dist/ /var/www/html
          echo "Files copy ok"
 
       
