--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "es6-promise": "^4.2.8",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
-    "node-sass": "^5.0.0",
+    "node-gyp": "^10.2.0",
     "popper.js": "^1.16.1",
     "postcss": "7",
+    "sass": "^1.78.0",
     "sass-resources-loader": "^2.1.1",
+    "stdin-discarder": "0.1.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^3.0.0",
     "vue-avatar": "^2.3.3",
