--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2  # 檢出代碼
+      - name: Checkout code  # 檢出代碼
+        uses: actions/checkout@v2
 
-      - name: Check dist exists  # 檢查 dist 資料夾是否存在
+      - name: Install Node.js  # 安裝 Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'  # 根據項目需求選擇 Node.js 版本
+
+      - name: Install dependencies and build  # 安裝依賴並構建項目
+        run: |
+          npm install
+          npm run build  # 構建 Vue 項目，生成 dist 資料夾
+
+      - name: Check dist exists  # 檢查 dist 資料夾是否生成
         run: ls ./dist
 
-      - name: Sync dist to EC2  # 將本地 dist 同步到 EC2 的 /var/www/html
+      - name: Sync dist to EC2  # 將 dist 資料夾同步到 EC2
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.EC2_HOST }}       # EC2 IP
-          username: ubuntu                    # EC2 使用者名稱
+          username: ubuntu                    # EC2 使用者名稱（根據你的 EC2 配置）
           key: ${{ secrets.EC2_SSH_KEY }}     # SSH 私鑰
           script: |
             rsync -av --delete ./dist/ /var/www/html/  # 將 dist 資料夾同步到 EC2 上的 /var/www/html
