--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,21 +16,27 @@ jobs:
       - name: Install Node.js  # 安裝 Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'  # 根據項目需求選擇 Node.js 版本
+          node-version: '16'
 
       - name: Install dependencies and build  # 安裝依賴並構建項目
         run: |
           npm install
           npm run build  # 構建 Vue 項目，生成 dist 資料夾
 
-      - name: Check dist exists  # 檢查 dist 資料夾是否生成
+      - name: Show current directory  # 顯示當前目錄
+        run: pwd
+
+      - name: List directory contents  # 列出當前目錄的內容
+        run: ls -la
+
+      - name: List dist contents  # 檢查 dist 資料夾
         run: ls ./dist
 
-      - name: Sync dist to EC2  # 將 dist 資料夾同步到 EC2
+      - name: Sync dist to EC2  # 同步 dist 到 EC2
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: ${{ secrets.EC2_HOST }}       # EC2 IP
-          username: ubuntu                    # EC2 使用者名稱（根據你的 EC2 配置）
-          key: ${{ secrets.EC2_SSH_KEY }}     # SSH 私鑰
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            rsync -av --delete ./dist/ /var/www/html/  # 將 dist 資料夾同步到 EC2 上的 /var/www/html
+            rsync -av --delete ./dist/ /var/www/html/
