--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,43 +1,34 @@
-name: Deploy Vue Project to EC2
+name: Deploy Vue Dist to EC2
 
 on:
   push:
-    branches:
-      - main  # 當推送到 main 分支時觸發
+    branches: [ main ]
+  workflow_dispatch:    # 允許手動觸發
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout code  # 檢出代碼
-        uses: actions/checkout@v2
-
-      - name: Install Node.js  # 安裝 Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'  # 選擇適當的 Node.js 版本
-
-      - name: Install dependencies and build  # 安裝依賴並構建項目
-        run: |
-          npm install
-          npm run build  # 構建 Vue 項目，生成 dist 資料夾
-
-      - name: Check working directory  # 顯示當前工作目錄
-        run: pwd
-
-      - name: List directory contents  # 列出目錄內容
-        run: ls -la
-
-      - name: List dist contents  # 檢查 dist 資料夾
-        run: ls dist/
-
-      - name: Sync dist to EC2  # 同步 dist 到 EC2
-        uses: appleboy/ssh-action@v0.1.6
-        with:
-          host: ${{ secrets.EC2_HOST }}       # EC2 IP
-          username: ubuntu                    # EC2 使用者名稱
-          key: ${{ secrets.EC2_SSH_KEY }}     # SSH 私鑰
-          port: 22                            # SSH 端口
-          script: |
-            rsync -av --delete dist/ /var/www/html/  # 同步 dist 資料夾到 EC2 上的 /var/www/html/
+    - uses: actions/checkout@v2
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'
+        
+    - name: Install dependencies
+      run: npm install
+        
+    - name: Build Vue project
+      run: npm run build
+      
+    - name: Deploy to EC2
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USERNAME }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        source: "dist/"
+        target: "/var/www/html"  # 改成您的 Nginx 實際服務目錄
+        strip_components: 1  # 這會移除 dist 資料夾本身，只複製其內容
